--- a/CSSProcessingEngine/CSSProcessingEngine.vcxproj
+++ b/CSSProcessingEngine/CSSProcessingEngine.vcxproj
@@ -127,9 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Commands.h" />
     <ClInclude Include="Structs.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Commands.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Structs.cpp" />
   </ItemGroup>
